Fix T40203: Fluid simulation needs more memory than displayed.

Nothing like a fix, actually, this is an issue in elbeem afaik.
For now, just warn user that complex obstacles may breack things.